{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 315,
  "lineage": "3ae220ee-5f6f-3597-1264-b22052128303",
  "resources": [
    {
      "module": "module.vnet",
      "mode": "data",
      "type": "azurerm_subnet",
      "name": "import",
      "each": "map",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": "subnet-a",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-a",
            "name": "subnet-a",
            "resource_group_name": "Anh-DevOps-Backup",
            "virtual_network_name": "devops-vnet"
          }
        },
        {
          "index_key": "subnet-b",
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-b",
            "name": "subnet-b",
            "resource_group_name": "Anh-DevOps-Backup",
            "virtual_network_name": "devops-vnet"
          }
        }
      ]
    },
    {
      "module": "module.jenkins-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkInterfaces/jenkins-vm-nic-0",
            "ip_configuration": [
              {
                "name": "jenkins-vm-ip-0",
                "primary": true,
                "private_ip_address": "192.168.0.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-pip-0",
                "subnet_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-a"
              }
            ],
            "location": "southeastasia",
            "name": "jenkins-vm-nic-0",
            "private_ip_address": "192.168.0.4",
            "private_ip_addresses": [
              "192.168.0.4"
            ],
            "resource_group_name": "Anh-DevOps-Backup",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-vm.azurerm_public_ip.vm",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-vm",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "vm",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkInterfaces/webserver-vm-nic-0",
            "ip_configuration": [
              {
                "name": "webserver-vm-ip-0",
                "primary": true,
                "private_ip_address": "192.168.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/publicIPAddresses/webserver-vm-pip-0",
                "subnet_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-b"
              }
            ],
            "location": "southeastasia",
            "name": "webserver-vm-nic-0",
            "private_ip_address": "192.168.1.4",
            "private_ip_addresses": [
              "192.168.1.4"
            ],
            "resource_group_name": "Anh-DevOps-Backup",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.webserver-vm.azurerm_public_ip.vm"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkInterfaces/jenkins-vm-nic-0|/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg",
            "network_interface_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkInterfaces/jenkins-vm-nic-0",
            "network_security_group_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-vm.azurerm_network_interface.vm",
            "module.jenkins-vm.azurerm_network_security_group.vm",
            "module.jenkins-vm.azurerm_public_ip.vm",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-vm",
      "mode": "managed",
      "type": "azurerm_network_interface_security_group_association",
      "name": "test",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkInterfaces/webserver-vm-nic-0|/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg",
            "network_interface_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkInterfaces/webserver-vm-nic-0",
            "network_security_group_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.webserver-vm.azurerm_network_interface.vm",
            "module.webserver-vm.azurerm_network_security_group.vm",
            "module.webserver-vm.azurerm_public_ip.vm"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg",
            "location": "southeastasia",
            "name": "jenkins-nsg",
            "resource_group_name": "Anh-DevOps-Backup",
            "security_rule": [],
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg",
            "location": "southeastasia",
            "name": "webserver-nsg",
            "resource_group_name": "Anh-DevOps-Backup",
            "security_rule": [],
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg",
            "location": "southeastasia",
            "name": "jenkins-vm-nsg",
            "resource_group_name": "Anh-DevOps-Backup",
            "security_rule": [],
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-vm",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "vm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg",
            "location": "southeastasia",
            "name": "webserver-vm-nsg",
            "resource_group_name": "Anh-DevOps-Backup",
            "security_rule": [],
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            },
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom_rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Jenkins_8080",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "8080"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/Jenkins_8080",
            "name": "Jenkins_8080",
            "network_security_group_name": "jenkins-nsg",
            "priority": 510,
            "protocol": "tcp",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "custom_rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "phpmyadmin_3333",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "",
            "destination_port_ranges": [
              "3333"
            ],
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/phpmyadmin_3333",
            "name": "phpmyadmin_3333",
            "network_security_group_name": "webserver-nsg",
            "priority": 530,
            "protocol": "tcp",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.webserver-nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "predefined_rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "SSH",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "jenkins-nsg",
            "priority": 500,
            "protocol": "TCP",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-nsg",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "predefined_rules",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "SSH",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/SSH",
            "name": "SSH",
            "network_security_group_name": "webserver-nsg",
            "priority": 500,
            "protocol": "TCP",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.webserver-nsg.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "HTTP",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "80",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/HTTP",
            "name": "HTTP",
            "network_security_group_name": "webserver-nsg",
            "priority": 510,
            "protocol": "TCP",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.webserver-nsg.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "HTTPS",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "443",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg/securityRules/HTTPS",
            "name": "HTTPS",
            "network_security_group_name": "webserver-nsg",
            "priority": 520,
            "protocol": "TCP",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "",
            "source_port_ranges": [
              "0-65535"
            ],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.webserver-nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-vm-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "jenkins-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-vm.azurerm_network_security_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-vm",
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "vm",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "Allow remote protocol in from all locations",
            "destination_address_prefix": "*",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "22",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-vm-nsg/securityRules/allow_remote_22_in_all",
            "name": "allow_remote_22_in_all",
            "network_security_group_name": "webserver-vm-nsg",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "Anh-DevOps-Backup",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.webserver-vm.azurerm_network_security_group.vm"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins-vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/publicIPAddresses/jenkins-vm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.187.125.123",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "jenkins-vm-pip-0",
            "resource_group_name": "Anh-DevOps-Backup",
            "sku": "Basic",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "module": "module.webserver-vm",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "vm",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/publicIPAddresses/webserver-vm-pip-0",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.187.125.130",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "webserver-vm-pip-0",
            "resource_group_name": "Anh-DevOps-Backup",
            "sku": "Basic",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "each": "list",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.0.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-a",
            "name": "subnet-a",
            "resource_group_name": "Anh-DevOps-Backup",
            "virtual_network_name": "devops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-b",
            "name": "subnet-b",
            "resource_group_name": "Anh-DevOps-Backup",
            "virtual_network_name": "devops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-c",
            "name": "subnet-c",
            "resource_group_name": "Anh-DevOps-Backup",
            "virtual_network_name": "devops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.vnet.azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "vnet",
      "each": "map",
      "provider": "provider.azurerm",
      "instances": [
        {
          "index_key": "subnet-a",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-a",
            "network_security_group_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/jenkins-nsg",
            "subnet_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-a"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-nsg.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.webserver-nsg.azurerm_network_security_group.nsg"
          ]
        },
        {
          "index_key": "subnet-b",
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-b",
            "network_security_group_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/networkSecurityGroups/webserver-nsg",
            "subnet_id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/subnet-b"
          },
          "dependencies": [
            "azurerm_resource_group.devops",
            "module.jenkins-nsg.azurerm_network_security_group.nsg",
            "module.vnet.azurerm_subnet.subnet",
            "module.vnet.azurerm_virtual_network.vnet",
            "module.webserver-nsg.azurerm_network_security_group.nsg"
          ]
        }
      ]
    },
    {
      "module": "module.vnet",
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.0.0/16"
            ],
            "id": "/subscriptions/ab98a41c-62e7-4873-b479-125537eea0cd/resourceGroups/Anh-DevOps-Backup/providers/Microsoft.Network/virtualNetworks/devops-vnet",
            "location": "southeastasia",
            "name": "devops-vnet",
            "resource_group_name": "Anh-DevOps-Backup",
            "tags": {
              "costcenter": "it",
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.devops"
          ]
        }
      ]
    }
  ]
}